<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/main"
    android:orientation="vertical"
    android:gravity="center"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:padding="24dp"
    tools:context=".RegistrationActivity">

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/enter_your_name"
        android:textSize="22dp"
        android:textStyle="bold"
        android:layout_marginBottom="16dp"
    />

    <EditText
        android:id="@+id/username"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:hint="@string/your_name"
        android:inputType="textPersonName"
        android:textSize="18dp"
        android:layout_marginBottom="24dp" />

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/terms_and_condition"
        android:textSize="22dp"
        android:textStyle="bold"
        android:layout_marginBottom="16dp"
        />

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/termsandcondition"
        android:textSize="16dp"
        android:layout_marginBottom="16dp"
        android:justificationMode="inter_word"
        />

    <CheckBox
        android:id="@+id/termsandconditioncheckbox"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/temrsandconditiontext"
        android:textSize="15dp"
        android:layout_marginBottom="24dp"
        />
    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/Note_for_permission_for_notification"
        android:textSize="18dp"
        android:textColor="@color/red"
        android:layout_marginBottom="10dp"
        />

    <Button
        android:id="@+id/continuebutton"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/continuebuttontext"
        android:enabled="false"
        />




</LinearLayout>