<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    android:id="@+id/aboutpage"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:padding="24dp">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:paddingTop="20dp"
        android:paddingBottom="50dp"
        android:orientation="vertical">
        <TextView
            android:text="@string/about_this_app"
            android:textSize="24sp"
            android:textStyle="bold"
            android:layout_marginBottom="8dp"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content" />

        <TextView
            android:text="@string/plancraft"
            android:textSize="30sp"
            android:textStyle="bold"
            android:layout_marginBottom="8dp"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content" />

        <TextView
            android:id="@+id/aboutdescriptiontextview"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginBottom="18dp" />

        <TextView
            android:text="@string/author_imon_mallik"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginBottom="18dp" />

        <TextView
            android:text="@string/version_no"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginBottom="18dp" />

        <TextView
            android:id="@+id/github_link"
            android:text="@string/view_source_on_github"
            android:textColor="@android:color/holo_blue_dark"
            android:autoLink="web"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content" />
    </LinearLayout>
</ScrollView>
